Fixed a bug with safari not showing the rebate badge correctly in the global-style css file

--- a/css/global-style.css
+++ b/css/global-style.css
@@ -1003,6 +1003,7 @@ color:#DDD; font-weight:500;}
 	text-align:center;
 	display:block;
 	position:absolute; top:15px; left:15px; text-align:center;
+	-webkit-transform: rotate(-15deg)!important;
 	transform: rotate(-15deg)!important;
 	background-color: #f0523f;
 	color: #fff;
